--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmy.</p>
           </div>
           <div class="col-md-3 text-center mb-4">
-            <img src="./Project/4.svg"Better Strategy & Quality" class="mb-3">
+            <img src="./Project/4.svg" alt="Strategy & Quality"  class="mb-3">
             <h5>Better Strategy & Quality</h5>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmy.</p>
           </div>
