--- a/index.html
+++ b/index.html
@@ -142,6 +142,35 @@
         </div>
       </div>
 
+      <!-- our project section  -->
+
+      <div class="container our-project">
+        <p class="text-center text-uppercase text-danger mb-2">OUR PROJECT</p>
+        <h2 class="text-center mb-4">WHY WE ARE BEST</h2>
+        
+        <div class="row">
+          <div class="col-md-6">
+            <img id="projectImage" src="path/to/default-image.jpg" alt="Project Image" class="img-fluid">
+          </div>
+          <div class="col-md-6">
+            <div class="project-details">
+              <div class="project-item active" data-image="path/to/image1.jpg">
+                <h4>Genderless Kei - Japan's Hot</h4>
+                <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of</p>
+              </div>
+              <div class="project-item bg-danger text-white" data-image="path/to/image2.jpg">
+                <h4>Better Strategy & Quality</h4>
+                <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of</p>
+              </div>
+              <div class="project-item" data-image="path/to/image3.jpg">
+                <h4>Genderless Kei - Japan's Hot</h4>
+                <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
 
 
