--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
         
         <div class="row">
           <div class="col-md-6">
-            <img id="projectImage" src="path/to/default-image.jpg" alt="Project Image" class="img-fluid">
+            <img id="projectImage" src="./project/image 1.jpg" alt="Project Image" class="project-image">
           </div>
           <div class="col-md-6">
             <div class="project-details">
-              <div class="project-item" data-image="path/to/image1.jpg">
+              <div class="project-item" data-image="./Project/image 1.png">
                 <h4>Genderless Kei - Japan's Hot</h4>
                 <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of</p>
               </div>
-              <div class="project-item" data-image="path/to/image2.jpg">
+              <div class="project-item" data-image="./Project/image 2.jpg">
                 <h4>Better Strategy & Quality</h4>
                 <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of</p>
               </div>
-              <div class="project-item" data-image="path/to/image3.jpg">
+              <div class="project-item" data-image="./Project/image 3.jpg">
                 <h4>Genderless Kei - Japan's Hot</h4>
                 <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of</p>
               </div>
