new section add

--- a/index.html
+++ b/index.html
@@ -171,7 +171,42 @@
         </div>
       </div>
 
-      <!--  -->
+      <!-- experts growts section -->
+      <div class="container company-growth">
+        <p class="text-center text-uppercase text-danger mb-2">EXPERTS GROWTS</p>
+        <h2 class="text-center mb-5">OUR COMPANY GROWTH</h2>
+        
+        <div class="row">
+          <div class="col-md-3 col-sm-6 mb-4">
+            <div class="growth-card">
+              <img src="./Project/heart 1.svg" alt="Customers">
+              <h3>199 +</h3>
+              <p>Staticfied Customers</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-4">
+            <div class="growth-card">
+              <img src="./Project/clock.svg" alt="Days">
+              <h3>1591+</h3>
+              <p>Days Of Operation</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-4">
+            <div class="growth-card">
+              <img src="./Project/checkmark.svg" alt="Projects">
+              <h3>283 +</h3>
+              <p>Complete Project</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-4">
+            <div class="growth-card">
+              <img src="./Project/trophy.svg" alt="Awards">
+              <h3>75+</h3>
+              <p>Win Awards</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
