--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
           </div>
           <div class="col-md-3 col-sm-6 mb-4">
             <div class="growth-card">
-              <img src="./Project/checkmark.svg" alt="Projects">
+              <img src="./Project/Path 4402.svg" alt="Projects">
               <h3>283 +</h3>
               <p>Complete Project</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 mb-4">
             <div class="growth-card">
-              <img src="./Project/trophy.svg" alt="Awards">
+              <img src="./Project/Path 4406.svg" alt="Awards">
               <h3>75+</h3>
               <p>Win Awards</p>
             </div>
