--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         
         <div class="row">
           <div class="col-md-3 text-center mb-4">
-            <img src="./Project/1.svg" alt="Clarified Vision & Target" class="mb-3">
+            <img src="./Project/1.svg" alt="Clarified Vision & Target lazy"  class="mb-3">
             <h5>Clarified Vision & Target</h5>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmy.</p>
           </div>
